--- a/index.html
+++ b/index.html
@@ -1,78 +1,147 @@
 <!DOCTYPE html>
-<html>
- <head>
-  <title>MVCS Conseil</title>
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <link rel="stylesheet" type="text/css" href="./bootstrap.css" />
-  <link rel="stylesheet" type="text/css" href="./style.css" />
- </head>
- <body>
-  <nav>
-    <div>
-        <a href="#"">Accueil</a>
-    </div>
-    <div>
-        <a href="#"">Offre Industriels</a>
-    </div>
-    <div>
-        <a href="#"">Qui suis-je</a>
-    </div>
-  </nav>
-  <main>
-   <header>
-    <div><span id="title">MVCS Conseil</span>
-    <br />
-    </span><span id="subTitle">Maîtrise des risques, Valorisation foncière, Conseil et Stratégie</span></div>
-  </header>
-  <section id="content">
-   <section>
-    <h1>MVCS Conseil</h1>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>MVCS-Conseil</title>
+    <link rel="stylesheet" href="./bootstrap.min.css">
+    <link rel="stylesheet" href="./style.css">
+</head>
+<body>
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container">
+            <img src="./imgs/accueil.png" style="max-height: 20px;" />&nbsp;
+            <a class="navbar-brand" href="#"> MVCS-Conseil</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Accueil</a>
+                    </li>
+                    <!-- Menu Offres avec menu déroulant -->
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="offresDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Offres
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="offresDropdown">
+                            <a class="dropdown-item" href="#">Offres industriels</a>
+                            <a class="dropdown-item" href="#">Offre promoteurs</a>
+                            <a class="dropdown-item" href="#">Législation</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="offresDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Qui-suis-je
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="offresDropdown">
+                            <a class="dropdown-item" href="#">Biographie</a>
+                            <a class="dropdown-item" href="#">Références</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
-    <ul>
-     <li>Maîtrise des risques, Valorisation foncière, Conseil et Stratégie</li>
-     <li>Stratégie et Environnement</li>
-     <li>Réhabilitation et valorisation de sites.</li>
-     <li>Nous vous accompagnons pour optimiser les opérations de réhabilitation, valorisation, cession ou acquisition de sites pollués.</li>
-
-     <li><b>Contact :</b> vague.maurice@orange.fr</li>
-     <li><b>téléphone : </b>06 16 48 04 89</li>
-    </ul>
+    <!-- Bannière -->
+    <div class="jumbotron text-center banner">
+        <h1 class="display-4">MVCS</h1>
+        <p class="lead"><i> Sous-titre ou slogan</i></p>
+    </div>
    
-    Stratégie et Environnement</br>
-Réhabilitation et Valorisation de sites.</br>
-Nos références expertise environnement en maîtrise d'ouvrage de réhabilitations, audits et transactions de sites industriels. </br>
-Transactions de sites en activité.</br>
-Sites soumis à déclaration.
-- 27 dépôts pétroliers audités et vendus à 12 sociétés différentes.
-Sites soumis à autorisation
-- 2 sites vendus en totalité et 4 cessions ou acquisitions partielles (sites en actionnariat).
-Sites en arrêt d'activité, fermetures, négociation avec les autorités, réhabilitation, mise en
-place de servitudes et restrictions d'usage, cessions.
-. Fermeture et démarrage de travaux de réhabilitation de 25 dépôts soumis à déclaration.
-. Traitement de réhabilitation et cession de 21 sites soumis à déclaration et 9 sites soumis
-à autorisation.
-Interventions ponctuelles sur des dossiers de fermetures, réhabilitations, mises en place
-de servitudes, cessions et réoccupations de sites particulièrement sensibles.
-Sites situés sur l'ensemble du territoire national et présentant des problématiques variées.
-    
-Expertises de justice : Estimation du passif environnemental de friches
-industrielles (désamiantage et déconstruction des bâtiments, dépollution des sols);
-dysfonctionnement d'un broyeur à déchets; accidents de livraison de marchandises
-dangereuses (analyse des causes de l'accident et identification des imputabilités, chiffrage
-de réparation des dommages).
-MVCS Conseil vous accompagne pour optimiser les opérations de réhabilitation,
-valorisation, cession ou acquisition concernant votre patrimoine immobilier industriel.
-Contact : Maurice Vague
-13, promenade Paul Doumer - 92400 - Courbevoie
-01 47 88 28 59 - 06 16 48 04 89
-vague.maurice@orange.fr
+    <!--****************************-->
+    <!-- Contenu du site -->
+    <!--****************************-->
+    <div class="container">
+        <h2>Bienvenue chez MVCS-Conseil</h2>
+        <p> Nous vous accompagnons pour optimiser les opérations de <b>réhabilitation</b>,
+            <b>valorisation</b>, <b>cession ou acquisition de sites pollués</b><br/><br/>
+            <div class="container content text-center">
+                <div class="row">
+                    <!-- Point 1 -->
+                    <div class="col-md-3 rounded p-3 bg-light mb-3 mr-3">
+                        <div class="text-center">
+                            <img src="./imgs/risk.png" alt="Image 1" class="img-fluid keyPoint">
+                            <p>Maîtrise des risques, Valorisation foncière, Conseil et Stratégie</p>
+                        </div>
+                    </div>
+                    <!-- Point 2 -->
+                    <div class="col-md-3 rounded p-3 bg-light mb-3 mr-3">
+                        <div class="text-center">
+                            <img src="./imgs/strategie.png" alt="Image 2" class="img-fluid keyPoint">
+                            <p>Stratégie et Environnement</p>
+                        </div>
+                    </div>
+                    <!-- Point 3 -->
+                    <div class="col-md-3 rounded p-3 bg-light mb-3 mr-3">
+                        <div class="text-center">
+                            <img src="./imgs/recycler.png" alt="Image 3" class="img-fluid keyPoint">
+                            <p>Réhabilitation et valorisation de sites</p>
+                        </div>
+                    </div>
+                </div>
+        </p>
+    </div>
+    <div class="container">
+        <h3>Présentation</h3>
+        <p>
+            MVCS Conseil accompagne les maîtres d'ouvrage pour optimiser les opérations de
+            réhabilitation, valorisation, cession ou acquisition concernant leur patrimoine immobilier
+            industriel.
+        </p>
+        <p>
+            Les maîtres d'ouvrage concernés sont Industriels, Collectivités locales et territoriales,
+Aménageurs, Promoteurs, Sociétés de Portage de sites.
+        </p>
+        <p>
+            Les sites concernés ont supporté une activité de production et/ou de stockage dans les
+secteurs :
+Chimie, pétrochimie, carbochimie, pharmacie, parapharmacie, phytosanitaires, pesticides,
+hydrocarbures, métallurgie et fonderie, traitement de surface, textile, tannerie, traitement
+du bois, cristallerie et céramique, pressing, papier.
+        </p>
+        <p>
+            Nous oeuvrons pour un développement durable.
+Les choix destinés à répondre aux besoins du présent ne doivent pas compromettre la
+capacité des générations futures à satisfaire leurs propres besoins.
+La réoccupation des sites doit se faire dans la perspective d'un développement durable
+maîtrisé, c'est à dire en protégeant la santé des personnes et la ressource en eau dans un
+cadre économique acceptable.
+        </p>
+        <p>
+            MVCS Conseil est membre de l'UCIE (Union des Consultants et Ingénieurs en
+Environnement: <a href="http://www.ucie.org">http://www.ucie.org</a>)
+        </p>
+        <p>
+            le forum de l'UCIE : http://fr.groups.yahoo.com/group/modhydropoll/ participe aux
+échanges d'uinformation entre professionnels.
+        </p>
+        <p>
+            MVCS Conseil est membre du syndicat Territoire et Environnement de la CINOV
+(Fédération du Conseil, de l'Ingénierie et du Numérique) : http://www.cinov.fr
+        </p>
+        <!-- Ajoutez d'autres sections et contenu ici -->
+    </div>
+    <!--****************************-->
+    <!-- END Contenu du site -->
+    <!--****************************-->
 
-</section>
-  </main>
-  <footer>
-    <div>Contact: vague.maurice@orange.fr / 06 16 48 04 89</div>
-  </footer>
-  <script type="text/javascript" src="./js.js"></script>
-  </main>
- </body>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-light text-center py-3 fixed-bottom d-flex">
+        <div class="container">
+            MVCS-Conseil - vague.maurice@wanadoo.fr - 06 16 48 04 89
+        </div>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
 </html>
