--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#"> <span class="bi bi-house-door"></span>MVCS-Conseil</a>
+            <a class="navbar-brand" href="#" title="Accueil">
+                <span>MVCS-Conseil</span></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -64,21 +65,21 @@
             <div class="container content mb-5">
                 <div class="row">
                     <!-- Point 1 -->
-                    <div class="col rounded p-3 bg-light mb-3 mr-3">
+                    <div class="col rounded p-3 bg-light mb-3 m-2">
                         <div class="text-center">
                             <img src="./imgs/risk.png" alt="Image 1" class="img-fluid keyPoint"><br /><br />
                             <p>Maîtrise des risques, Valorisation foncière, Conseil et Stratégie</p>
                         </div>
                     </div>
                     <!-- Point 2 -->
-                    <div class="col rounded p-3 bg-light mb-3 mr-3">
+                    <div class="col rounded p-3 bg-light mb-3 m-2">
                         <div class="text-center">
                             <img src="./imgs/strategie.png" alt="Image 2" class="img-fluid keyPoint"><br /><br />
                             <p>Stratégie et Environnement</p>
                         </div>
                     </div>
                     <!-- Point 3 -->
-                    <div class="col rounded p-3 bg-light mb-3 mr-3">
+                    <div class="col rounded p-3 bg-light mb-3 m-2">
                         <div class="text-center">
                             <img src="./imgs/recycler.png" alt="Image 3" class="img-fluid keyPoint"><br /><br />
                             <p>Réhabilitation et valorisation de sites</p>
@@ -91,7 +92,7 @@
 
     <!--Notre mission-->
     <div class="container-fluid bg-secondary" style="padding-bottom: 65px;">
-        <div class="container p- bg-light p-5">
+        <div class="container p- bg-light p-5 content">
             <h3 class="mb-5">Notre mission:</h3>
             <p class="pb-3">
                 Nous accompagnons les maîtres d'ouvrage pour optimiser les opérations de
@@ -99,8 +100,8 @@
                 industriel.
             </p>
             
-                <div class="row pb-5">
-                    <div class="col border mr-2 p-4 bg-white text-center">
+                <div class="row pb-5 ">
+                    <div class="col border p-4 bg-white text-center m-2 my-3">
                         <img src="./imgs/build.png" class="img-fluid mb-3" style="max-height: 50px;" />
                         <p class="" style=" font-weight: bold;">Maîtres d'ouvrage concernés:</p>
                         <ul class="list-unstyled">
@@ -111,7 +112,7 @@
                             <li>Sociétés de Portage de sites</li>
                         </ul>
                     </div>
-                    <div class="col border ml-2 p-4 bg-white text-center">
+                    <div class="col border p-4 bg-white text-center m-2 my-3">
                         <img src="./imgs/site.png" class="img-fluid mb-3" style="max-height: 50px;" />
                         <p><b>Sites concernés</b>, <i>ayant supporté une activité de production et/ou de stockage dans les secteurs</i> :</p>
                         <ul class="list-group text-left ml-5">
