--- a/index.htm
+++ b/index.htm
@@ -129,7 +129,7 @@
             
             
             <p>
-                Nous oeuvrons pour un développement durable et les choix destinés à répondre aux besoins du présent ne doivent pas compromettre la capacité des générations futures à satisfaire leurs propres besoins. La réoccupation des sites doit se faire dans la perspective d'un développement durable maîtrisé, c'est à dire en protégeant la santé des personnes et la ressource en eau dans un cadre économique acceptable.
+                Nous œuvrons pour un développement durable et les choix destinés à répondre aux besoins du présent ne doivent pas compromettre la capacité des générations futures à satisfaire leurs propres besoins. La réoccupation des sites doit se faire dans la perspective d'un développement durable maîtrisé, c'est à dire en protégeant la santé des personnes et la ressource en eau dans un cadre économique acceptable.
             </p>
             <p>
                 Par ailleurs, MVCS Conseil est <b>membre de l'UCIE</b> (Union des Consultants et Ingénieurs en Environnement: <a href="http://www.ucie.org">http://www.ucie.org</a>), ainsi que du <b>syndicat Territoire et Environnement de la CINOV</b> (Fédération du Conseil, de l'Ingénierie et du Numérique <a href="http://www.cinov.fr">http://www.cinov.fr</a>)
@@ -151,7 +151,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-light text-center py-3 fixed-bottom d-flex">
         <div class="container">
-            MVCS-Conseil - vague.maurice@wanadoo.fr <br/>- 06 16 48 04 89 -
+             &copy; vague.maurice@wanadoo.fr <br/>- 06 16 48 04 89 -
         </div>
     </footer>
 
