--- a/index.htm
+++ b/index.htm
@@ -47,7 +47,7 @@
     </nav>
 
     <!-- Bannière -->
-    <div class="jumbotron text-center banner bg-dark" style="border-radius: 0">
+    <div class="jumbotron text-center banner bg-dark" style="border-radius: 0; background-image: url('./imgs/banner0.png'); background-repeat: no-repeat; background-position: center;">
         <h1 class="display-4 text-light">MVCS</h1>
         <p class="lead text-light"><i> Sous-titre ou slogan</i></p>
     </div>
@@ -91,7 +91,7 @@
     </div>
 
     <!--Notre mission-->
-    <div class="container-fluid bg-secondary" style="padding-bottom: 65px;">
+    <div class="container-fluid bg-secondary" style="padding-bottom: 65px; background-image: url('./imgs/space.png');">
         <div class="container p- bg-light p-5 content">
             <h3 class="mb-5">Notre mission:</h3>
             <p class="pb-3">
@@ -151,7 +151,7 @@
     <!-- Footer -->
     <footer class="bg-dark text-light text-center py-3 fixed-bottom d-flex">
         <div class="container">
-             &copy; vague.maurice@wanadoo.fr <br/>- 06 16 48 04 89 -
+            - &copy; - vague.maurice@wanadoo.fr <br/>- 06 16 48 04 89 -
         </div>
     </footer>
 
