--- a/contact.htm
+++ b/contact.htm
@@ -87,9 +87,9 @@
      <div class="col border p-5 bg-white text-center m-3">
       <p class="text-center"><img src="./imgs/linternet.png" class="img-fluid mb-3" style="max-height: 50px;" /></p>
       <hr />
-      <p><a href="mailto:vague.maurice@orange.fr">vague.maurice@orange.fr</a></p>
-      <p>-</p>
-      <p><a href="https://mvague.github.io/MVCS-Conseil/">mvague.github.io/MVCS-Conseil/</a></p>
+      <div class="container-fluid"><a href="mailto:vague.maurice@orange.fr">vague.maurice@orange.fr</a></div>
+      <div class="container-fluid">-</div>
+      <div class=""><a href="https://mvague.github.io/MVCS-Conseil/">mvague.github.io/MVCS-Conseil/</a></p>
      </div>
     </div>
    </div>
