--- a/contact.htm
+++ b/contact.htm
@@ -57,13 +57,13 @@
   <!-- Contenu du site -->
   <!--*****************-->
 
-  <div class="container-fluid"></div>
-  <div class="container-fluid bg-secondary" style="">
+  
+  <div class="container-fluid bg-secondary pb-5">
    <div class="container bg-light p-4 content my-5">
     <div class="row">
 
      <!--Adresse-->
-     <div class="col border p-5 bg-white m-3">
+     <div class="col border p-5 bg-white m-3 shadow-sm">
       <p class="text-center"><img src="./imgs/poster.png" class="img-fluid mb-3" style="max-height: 50px;" /></p>
       <hr />
       <p class="lead">Maurice Vague</p>
@@ -73,7 +73,7 @@
      </div>
 
      <!--Tel-->
-     <div class="col border p-5 bg-white text-center m-3">
+     <div class="col border p-5 bg-white text-center m-3 shadow-sm">
       <p class="text-center"><img src="./imgs/tel.png" class="img-fluid mb-3" style="max-height: 50px;" /></p>
       <hr />
       <div class="container ">
@@ -84,7 +84,7 @@
      </div>
 
      <!--Internet-->
-     <div class="col border p-5 bg-white text-center m-3">
+     <div class="col border p-5 bg-white text-center m-3 shadow-sm">
       <p class="text-center"><img src="./imgs/linternet.png" class="img-fluid mb-3" style="max-height: 50px;" /></p>
       <hr />
       <div class="container-fluid"><a href="mailto:vague.maurice@orange.fr">vague.maurice@orange.fr</a></div>
