--- a/index.htm
+++ b/index.htm
@@ -59,24 +59,24 @@
 
   <div class="container-fluid">
    <div class="container">
-    <div class="container content mt-3 mb-3">
+    <div class="container content mt-3 mb-3 ">
      <div class="row">
       <!-- Point 1 -->
-      <div class="col rounded p-3 bg-light mb-3 m-2">
+      <div class="col rounded p-3 bg-light mb-3 m-2 shadow">
        <div class="text-center">
         <img src="./imgs/risk.png" alt="Image 1" class="img-fluid keyPoint"><br /><br />
         <p>Maîtrise des risques, Valorisation foncière, Conseil et Stratégie</p>
        </div>
       </div>
       <!-- Point 2 -->
-      <div class="col rounded p-3 bg-light mb-3 m-2">
+      <div class="col rounded p-3 bg-light mb-3 m-2 shadow">
        <div class="text-center">
         <img src="./imgs/strategie.png" alt="Image 2" class="img-fluid keyPoint"><br /><br />
         <p>Stratégie et Environnement</p>
        </div>
       </div>
       <!-- Point 3 -->
-      <div class="col rounded p-3 bg-light mb-3 m-2">
+      <div class="col rounded p-3 bg-light mb-3 m-2 shadow">
        <div class="text-center">
         <img src="./imgs/recycler.png" alt="Image 3" class="img-fluid keyPoint"><br /><br />
         <p>Réhabilitation et valorisation de sites</p>
@@ -85,8 +85,8 @@
      </div>
     </div>
 
-    <p class="mb-5"> Nous vous accompagnons pour optimiser les opérations de <b>réhabilitation</b>,
-    <b>valorisation</b>, <b>cession ou acquisition de sites pollués.</b></p>
+    <h4 class="mb-5 p-3 text-center">Nous vous accompagnons pour optimiser les opérations de <b>réhabilitation</b>,
+    <b>valorisation</b>, <b>cession ou acquisition de sites pollués.</b></h4>
    </div>
   </div>
 
@@ -115,12 +115,12 @@
      <img src="./imgs/site.png" class="img-fluid mb-3" style="max-height: 50px;" />
      <p><b>Sites concernés</b>, <i>ayant supporté une activité de production et/ou de stockage dans les secteurs</i> :</p>
      <ul class="list-group text-left ml-5">
-      <li>chimie, pétrochimie, carbochimie</li>
-      <li>pharmacie, Parapharmacie</li>
-      <li>phytosanitaires, pesticides</li>
-      <li>hydrocarbures, métallurgie, fonderie</li>
-      <li>cristallerie et céramique, pressing, papier</li>
-      <li>traitement de surface, textile, tannerie, traitement du bois</li>
+      <li>Chimie, pétrochimie, carbochimie</li>
+      <li>Pharmacie, Parapharmacie</li>
+      <li>Phytosanitaires, pesticides</li>
+      <li>Hydrocarbures, métallurgie, fonderie</li>
+      <li>Cristallerie et céramique, pressing, papier</li>
+      <li>Traitement de surface, textile, tannerie, traitement du bois</li>
      </ul>
      <hr />
     </div>
