--- a/offreIndustriels.htm
+++ b/offreIndustriels.htm
@@ -57,80 +57,43 @@
   <!-- Contenu du site -->
   <!--*****************-->
 
-  <div class="container-fluid">
-   <div class="container">
-    <div class="container content mt-3 mb-3">
-     <div class="row">
-      <!-- Point 1 -->
-      <div class="col rounded p-3 bg-light mb-3 m-2">
-       <div class="text-center">
-        <img src="./imgs/risk.png" alt="Image 1" class="img-fluid keyPoint"><br /><br />
-        <p>Maîtrise des risques, Valorisation foncière, Conseil et Stratégie</p>
-       </div>
-      </div>
-      <!-- Point 2 -->
-      <div class="col rounded p-3 bg-light mb-3 m-2">
-       <div class="text-center">
-        <img src="./imgs/strategie.png" alt="Image 2" class="img-fluid keyPoint"><br /><br />
-        <p>Stratégie et Environnement</p>
-       </div>
-      </div>
-      <!-- Point 3 -->
-      <div class="col rounded p-3 bg-light mb-3 m-2">
-       <div class="text-center">
-        <img src="./imgs/recycler.png" alt="Image 3" class="img-fluid keyPoint"><br /><br />
-        <p>Réhabilitation et valorisation de sites</p>
-       </div>
-      </div>
+
+  <div class="row">
+    <div class="col p-5 bg-transparent mt-5 ml-5 mr-5 mb-0">
+      <h3>Offre Industriels</h3>
+      <p>La valorisation des friches industrielles présente des problématiques délicates aux enjeux financiers importants. Face à ces enjeux qui concernent votre patrimoine immobilier industriel, vous manquez de disponibilité et de ressources. Nous vous apportons notre technicité exercée notamment au service d'un groupe pétrolier international en matière de réhabilitation, cession et acquisition de sites pour optimiser vos dossiers fonciers industriels.</p>
+      <p><b>Notre mission :</b> Bâtir et mettre en oeuvre la stratégie de réhabilitation et valorisation de votre bien immobilier industriel. Notre expertise : Réhabilitations, cessions et acquisitions de sites et pratiques des négociations avec les autorités publiques. Nos prestations : A partir d'une analyse détaillée de votre site, de son environnement et de son avenir prévisible en matière d'urbanisme, nous définissons ensemble les restrictions d'usage et servitudes de votre terrain qui pourront être proposées aux autorités, nous évaluons les différentes possibilités de valorisation et vous assistons pour leur réalisation.</p>  
+    </div>
+    <div class="col p-5 bg-transparent mt-5 ml-5 mr-5 mb-0 text-center">
+      <img src="./imgs/industrie.png" class="img-fluid" />
+    </div>
+   </div>
+   <div class="row">
+    <div class="col p-5 bg-transparent m-5 mt-0 text-center">
+      <img src="./imgs/village.png" class="img-fluid" />
+    </div>
+    <div class="col p-5 bg-transparent m-5 mt-0">
+     <h5>Nous vous conseillons pour:</h5>
+     <ul class="">
+      <li class="p-1">l'analyse détaillée de votre site dans ses paramètres environnement et urbanisme pour définir les servitudes et restrictions d'usages adaptées</li>
+      <li class="p-1">l'élaboration de votre stratégie de cession</li>
+      <li class="p-1">la définition des cahiers des charges des diagnostics, études de risques et travaux de réhabilitation pertinents à mener</li>
+      <li class="p-1">la sélection des prestataires de services (bureaux d'études et entreprises de travaux) lesmieux adaptés à votre projet</li>
+      <li class="p-1">la recherche de co-financements publics nationaux et communautaires,</li>
+      <li class="p-1">le suivi continu de la réalisation des études et des travaux ,</li>
+      <li class="p-1">les discussions, en bonne intelligence, avec les autorités publiques,</li>
+      <li class="p-1">la détermination du prix de vente optimal de votre site et la recherche d'acquéreurs.</li>
+      <li class="p-1">Les audits d'acquisition et les négociations.</li>
+     </ul>
      </div>
     </div>
-
-    <p class="mb-5"> Nous vous accompagnons pour optimiser les opérations de <b>réhabilitation</b>,
-    <b>valorisation</b>, <b>cession ou acquisition de sites pollués.</b></p>
    </div>
-  </div>
-
   <div class="container-fluid bg-secondary" style="padding-bottom: 65px;">
+    
    <!--Notre mission-->
-   <div class="container bg-light p-5 content my-5">
-    <p class="text-center"><img src="./imgs/drapeau.png" class="img-fluid mb-3" style="max-height: 50px;" /></p>
-    <h3 class="mb-4 text-center"> Notre mission:</h3>
-    <p class="pb-3">Nous aidons les maîtres d'ouvrage à optimiser les opérations de <b>réhabilitation</b>, <b>valorisation</b>, <b>cession</b> ou <b>acquisition</b> au sein de leur patrimoine immobilier industriel.</p>
-   </div>
-  
-   <!-- Left Right-->
-   <div class="row pb-5 m-0">
-    <div class="col border p-4 bg-white text-center m-2 my-3">
-     <img src="./imgs/build.png" class="img-fluid mb-3" style="max-height: 50px;" />
-     <p class="" style=" font-weight: bold;">Maîtres d'ouvrage concernés:</p>
-     <ul class="list-unstyled">
-      <li>Industriels</li>
-      <li>Collectivités locales et territoriales</li>
-      <li>Aménageurs</li>
-      <li>Promoteurs</li>
-      <li>Sociétés de Portage de sites</li>
-     </ul>
-    </div>
-    <div class="col border p-4 bg-white text-center m-2 my-3">
-     <img src="./imgs/site.png" class="img-fluid mb-3" style="max-height: 50px;" />
-     <p><b>Sites concernés</b>, <i>ayant supporté une activité de production et/ou de stockage dans les secteurs</i> :</p>
-     <ul class="list-group text-left ml-5">
-      <li>chimie, pétrochimie, carbochimie</li>
-      <li>pharmacie, Parapharmacie</li>
-      <li>phytosanitaires, pesticides</li>
-      <li>hydrocarbures, métallurgie, fonderie</li>
-      <li>cristallerie et céramique, pressing, papier</li>
-      <li>traitement de surface, textile, tannerie, traitement du bois</li>
-     </ul>
-     <hr />
-    </div>
-   </div> 
-            
-   <div class="container bg-light p-5 content mb-5">
-    <p class="text-center"><img src="./imgs/reseau.png" class="img-fluid mb-3" style="max-height: 50px;" /></p>
-    <p><b>Communauté:</b> nous œuvrons pour un développement durable. Les choix visant à répondre aux besoins du présent ne doivent pas compromettre la capacité des générations futures à satisfaire leurs propres besoins. La réoccupation des sites doit se faire dans la perspective d'un développement durable maîtrisé, c'est à dire en protégeant la santé des personnes et la ressource en eau dans un cadre économique acceptable.</p>
-    <p>Par ailleurs, MVCS Conseil est <b>membre de l'UCIE</b> (Union des Consultants et Ingénieurs en Environnement: <a href="http://www.ucie.org">http://www.ucie.org</a>), ainsi que du <b>syndicat Territoire et Environnement de la CINOV</b> (Fédération du Conseil, de l'Ingénierie et du Numérique <a href="http://www.cinov.fr">http://www.cinov.fr</a>)</p>
-    <p>Le <a href=" http://fr.groups.yahoo.com/group/modhydropoll/">forum de l'UCIE</a> participe aux échanges d'information entre professionnels.</p>
+   
+   <div class="container bg-light p-5 content my-5 lead">
+    MVCS Conseil vous accompagne pour optimiser les opérations de réhabilitation, valorisation, cession ou acquisition concernant votre patrimoine immobilier industriel.
    </div>
   </div>
   <!--****************************-->
